--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
+.container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  position: relative;
+  background-color: rgba(139, 180, 255, 0.466);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container > .title {
+  font-size: 2em;
+  font-family: cursive;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container > .images {
+  width: 100%;
+  margin: 35px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.container > .images > img {
+  background-size: cover;
+  width: 80%;
+}
+
+.container > .images > img.submit-img {
+  margin-bottom: 10px;
+}
+
+.container > .buttons {
+  position: relative;
+}
+
+.container > .buttons > button {
   color: white;
+  background-color: cornflowerblue;
+  border-color: lightblue;
+  border-radius: 10%;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*# sourceMappingURL=App.css.map */
